# DigitalTwin-for-MyPalletizer-UnityVersion

./: .gitignore  README.md
.github/workflows/: python-package.yml  unity-build.yml
PythonCoding/src/examples/: demo_basic.py
PythonCoding/src/mypalletizer/: controller.py  errors.py  objects.py  presets.py  protocol.py  robot.py
docs/asciidoc/: index.adoc
docs/asciidoc/assets/: .$BPMN.drawio.bkp  BPMN.drawio  Joints.xcf  Kontextdiagramm.drawio
docs/asciidoc/chapters/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_micro_services.adoc  11_technical_risks.adoc  12_glossary.adoc  12_technical_risks.adoc  13_glossary.adoc
python/: README.md  pyproject.toml
python/examples/: demo_basic.py
python/src/: README.md
python/src/mypalletizer/: __init__.py  controller.py  objects.py  presets.py  protocol.py  robot.py  world.py
python/src/mypalletizer_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/tests/: test_protocol.py  test_robot.py  test_world.py
unity/Assets/Editor/: BuildScript.cs
unity/Assets/Materials/: BLUE.mat  GREEN.mat  RED.mat
unity/Assets/Prefabs/: BoxPrefab.prefab  CylinderPrefab.prefab  SpherePrefab.prefab
unity/Assets/Scenes/: SampleScene.unity
unity/Assets/Scripts/: AdaptiveGripperController.cs  GrabbableObject.cs  GripperDownConstraint.cs  MyPalletizerAdapter.cs  MyPalletizerCoordTarget.cs  (+5 more)
(+7 files in other folders)
