[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypalletizer-api"
version = "0.1.0"
description = "API for MyPalletizer 260 M5 (real, virtual, or both)."
readme = "README.md"
authors = [
    {name = "Stonehouse1703"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pymycobot",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
keywords = ["robotics", "simulation", "mypalletizer", "digital-twin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]